Попытка создать обмен картинками

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="x">X</string>
     <string name="Addtext">Name</string>
     <string name="addbutton">хочу посмтреть</string>
-
+    <string name="addButton">Button</string>
+    <string name="addName">Name</string>
 
 </resources>
